fixing toast messages covering up links

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -127,14 +127,6 @@ nav a:hover {
   gap: 2rem;
 }
 
-/* nav ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-  padding: 1rem;
-} */
-
 .landing-container {
   display: flex;
   flex-direction: column;
@@ -244,13 +236,14 @@ footer {
 
 .toast-container {
   position: fixed;
-  top: 1rem;
+  top: 3rem;
   right: 1rem;
   z-index: 9999;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   align-items: flex-end;
+  pointer-events: none;
 }
 
 .toast {
